--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <td>Nas/ste/19/1104</td>
       </tr>
       <!-- Add more rows as needed -->
+      <tr>
+        <td>Alamin halilu ismail</td>
+        <td>Nas/ste/19/1187</td>
+      </tr>
     </table>
   </body>
 </html>
